Extend test application generation framework (#319)
* fixed algorithm names, fixed positioning in composite

Change-Id: Ia78da6622f5ca5273d9c429b8ccafd20dacbc4d0

* MatchFBGen fix

Change-Id: If937700377087cfa42e52d3ba672b931b54e0575

* continue fixing matchFB gen

Change-Id: I78e1aee8e76550138e83b4626589ab8b33d03bf1

* match fb works here

Change-Id: Ibf10f00df8fa7682a874e29247d82f4186977304

* testgeneration works now

* clean up and refactoring

Change-Id: I73a16bb6240e9fa12eec581b97e241f5e852c3a8

* Update TestsignalFBGenerator.java

---------

Co-authored-by: Melanie Winter <melanie.winter.02@gmx.at>