@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Johannes Kepler University Linz
+ * Copyright (c) 2023, 2024 Johannes Kepler University Linz
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -12,7 +12,10 @@
  *******************************************************************************/
 package org.eclipse.fordiac.ide.fb.interpreter.testappgen;
 
+import static org.eclipse.fordiac.ide.fb.interpreter.testappgen.GeneratedNameConstants.EVENT_NEXTCASE;
+
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.fordiac.ide.fb.interpreter.testappgen.internal.AbstractBasicFBGenerator;
@@ -27,9 +30,9 @@ import org.eclipse.fordiac.ide.model.libraryElement.FBType;
 import org.eclipse.fordiac.ide.model.libraryElement.OutputPrimitive;
 import org.eclipse.fordiac.ide.model.libraryElement.VarDeclaration;
 
-public class TestFbGenerator extends AbstractBasicFBGenerator {
+public class TestsignalFBGenerator extends AbstractBasicFBGenerator {
 
-	public TestFbGenerator(final FBType type, final TestSuite testSuite) {
+	public TestsignalFBGenerator(final FBType type, final TestSuite testSuite) {
 		super(type, testSuite);
 	}
 
@@ -41,7 +44,12 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 	// each testcase needs an event that starts it
 	@Override
 	protected List<Event> createInputEventList() {
-		return testSuite.getTestCases().stream().map(n -> createEvent(n.getName() + "_TEST", true)).toList(); //$NON-NLS-1$
+		final List<Event> list = new ArrayList<>();
+		list.addAll(testSuite.getTestCases().stream().map(n -> createInputEvent(n.getName() + "_TEST")) //$NON-NLS-1$
+				.toList());
+		list.add(createInputEvent(EVENT_NEXTCASE));
+		return list;
+
 	}
 
 	// needs all event inputs from the block to test as outputs
@@ -50,7 +58,7 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 	@Override
 	protected List<Event> createOutputEventList() {
 		final List<Event> list = new ArrayList<>();
-		list.addAll(sourceType.getInterfaceList().getEventInputs().stream().map(n -> createEvent(n.getName(), false))
+		list.addAll(sourceType.getInterfaceList().getEventInputs().stream().map(n -> createOutputEvent(n.getName()))
 				.toList());
 		list.addAll(getExpectedEvents(false));
 		return list;
@@ -79,7 +87,8 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 					eccGen.getLastState().getECAction().add(actToMatch);
 
 				} else {
-					eccGen.createTransitionFromTo(eccGen.getNTimesLast(1), eccGen.getLastState(), null);
+					eccGen.createTransitionFromTo(eccGen.getNTimesLast(1), eccGen.getLastState(),
+							destinationFB.getInterfaceList().getEventInputs().getLast());
 				}
 
 				stateCnt++;
@@ -110,8 +119,7 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 		boolean containsParameters = false;
 		int nameCnt = 0;
 		if (!fb.getAlgorithm().isEmpty()) {
-			nameCnt = Integer.parseInt(
-					Character.toString(fb.getAlgorithm().get(fb.getAlgorithm().size() - 1).getName().charAt(1)));
+			nameCnt = Integer.parseInt(fb.getAlgorithm().getLast().getName().substring(1));
 			nameCnt++;
 		}
 
@@ -126,7 +134,9 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 		for (final OutputPrimitive outP : testState.getTestOutputs()) {
 			if (outP.getParameters() != null && !outP.getParameters().equals("")) { //$NON-NLS-1$
 				containsParameters = true;
-				algText.append(createDataPinName(outP.getParameters().replace(";", ";\n"))); //$NON-NLS-1$ //$NON-NLS-2$
+				String s = outP.getParameters().replace(";", ";\n");//$NON-NLS-1$ //$NON-NLS-2$
+				s = createDataPinName(s);
+				algText.append(s);
 			}
 		}
 
@@ -141,7 +151,7 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 		for (int i = 0; i < s.length(); i++) {
 			if (s.charAt(i) == ':') {
 				sb.append("_expected:"); //$NON-NLS-1$
-			} else {
+			} else if (s.charAt(i) != ' ') {
 				sb.append(s.charAt(i));
 			}
 		}
@@ -150,7 +160,7 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 
 	@Override
 	protected String getTypeName() {
-		return sourceType.getName() + "_TEST"; //$NON-NLS-1$
+		return sourceType.getName() + "_TESTSIGNALGEN"; //$NON-NLS-1$
 	}
 
 	@Override
@@ -161,8 +171,7 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 	// no data input needed
 	@Override
 	protected List<VarDeclaration> createInputDataList() {
-
-		return new ArrayList<>();
+		return Collections.emptyList();
 	}
 
 	// data pin needed for each input data pin on the block to test to feed it the
@@ -172,9 +181,9 @@ public class TestFbGenerator extends AbstractBasicFBGenerator {
 	protected List<VarDeclaration> createOutputDataList() {
 		final List<VarDeclaration> list = new ArrayList<>();
 		list.addAll(sourceType.getInterfaceList().getInputVars().stream()
-				.map(n -> createVarDeclaration(n.getType(), n.getName(), false)).toList());
+				.map(n -> createOutputVarDecl(n.getType(), n.getName())).toList());
 		list.addAll(sourceType.getInterfaceList().getOutputVars().stream()
-				.map(n -> createVarDeclaration(n.getType(), n.getName() + "_expected", false)).toList()); //$NON-NLS-1$
+				.map(n -> createOutputVarDecl(n.getType(), n.getName() + "_expected")).toList()); //$NON-NLS-1$
 		return list;
 	}
 }
